# bahasa-indonesia

./: README.MD  create_audio.py  pyproject.toml
pelajaran/1_pelajaran_kesatu/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
pelajaran/2_pelajaran_kedua/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
pelajaran/3_pelajaran_ketiga/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
pelajaran/4_pelajaran_keempat/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
pelajaran/5_pelajaran_kelima/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
pelajaran/6_pelajaran_keenam/: 1_pelajaran.txt  2_latihan_1.txt  3_latihan_2.txt
